fix: function addWeek| weekArr.js

--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<script src="weekArr.js" defer></script>
+<p id="out_arr"></p>
+<script src="weekArr.js"></script>
+
 </body>
 </html>
 
