fix: function week|script.js

--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<p id="out_arr"></p>
+<ul id="arr_week"></ul>
 <script src="weekArr.js"></script>
 
 </body>
