fix: task2|script.js

--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -5,9 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<ul id="arr_week"></ul>
-<script src="weekArr.js"></script>
-
+<script src="week.js"></script>
 </body>
 </html>
-
